name:              featureless-void
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src, src/app
    exposed-modules: Application
                     Foundation
                     Handler.Common
                     Handler.Feed
                     Handler.Feed.Types
                     Handler.Home
                     Handler.Scream
                     Helper
                     Helper.S3
                     Helper.Time
                     Helper.Twitter
                     Helper.Twitter.Auth
                     Helper.Twitter.Base
                     Helper.Twitter.Endpoints
                     Helper.Twitter.Types
                     Import
                     Import.NoFoundation
                     Markdown
                     Model
                     Query
                     Settings
                     Settings.StaticFiles

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

    build-depends:
                   -- Due to a bug in GHC 8.0.1, we block its usage
                   -- See: https://ghc.haskell.org/trac/ghc/ticket/12130
                   base                          >= 4.8.2.0    && < 4.9
                                              || >= 4.9.1.0    && < 5

                 , yesod                         >= 1.4.3      && < 1.5
                 , yesod-core                    >= 1.4.17     && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.7
                 , persistent-postgresql         >= 2.1.1      && < 2.7
                 , persistent-template           >= 2.0        && < 2.7
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.3
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.3
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6        && < 1.1
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.4
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , case-insensitive
                 , wai
                 , yesod-auth-hashdb
                 , pwstore-fast
                 , yesod-paginator
                 , amazonka
                 , amazonka-s3
                 , amazonka-s3-streaming
                 , lens
                 , load-env
                 , heroku-persistent
                 , uuid
                 , filepath
                 , blaze-markup
                 , pandoc
                 , yesod-newsfeed
                 , authenticate-oauth
                 , http-client
                 , conduit-extra
                 , xss-sanitize

executable         featureless-void
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    src/app
    build-depends:     base, featureless-void

    ghc-options:       -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -O2

executable         task
    if flag(library-only)
        Buildable: False

    main-is:           TaskMain.hs
    hs-source-dirs:    task
    other-modules:     Task
                     , Task.TweetImport

    build-depends:     base
                     , aeson
                     , bytestring
                     , directory
                     , featureless-void
                     , filepath
                     , mime-types
                     , optparse-applicative
                     , text
                     , yesod-core

    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     Handler.CommonSpec
                       TestImport
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

    build-depends: base
                 , featureless-void
                 , yesod-auth
                 , yesod-test >= 1.5.2 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
